# zulip-gtk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
zulip_gtk/: __main__.py
zulip_gtk/ui/: __init__.py  async_worker.py  header_bar.py  main_paned.py  message.py  stream.py  window.py
zulip_gtk/zulip_client/: __init__.py  messages.py  streams.py
