[tool.poetry]
name = "zulip-gtk"
version = "0.1.0"
description = "Zulip GTK"
authors = ["Hannes <h@nnes.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
PyGObject = "^3.42.1"
zulip = "^0.8.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
PyGObject-stubs = "^0.0.9"
pytest = "^7.1.2"
ssort = "^0.11.5"
pyright = "^1.1.253"

[tool.pyright]
include = ["zulip_gtk"]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
