[tool.poetry]
name = "zulip-gtk"
version = "0.1.0"
description = "Zulip GTK"
authors = ["Hannes <h@nnes.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
PyGObject = "^3.42.2"
zulip = "^0.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
PyGObject-stubs = "^1.0.0"
pytest = "^7.1.2"
ssort = "^0.11.6"
pyright = "^1.1.265"

[tool.pyright]
include = ["zulip_gtk"]
typeCheckingMode = "basic"
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
