[tool.poetry]
name = "zulip-gtk"
version = "0.1.0"
description = "Zulip GTK"
authors = ["Hannes <h@nnes.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pygobject = "^3.42.2"
zulip = "^0.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pygobject-stubs = "^1.0.0"
pyright = "^1.1.282"
pytest = "^7.2.0"
ssort = "^0.11.6"

[tool.pyright]
include = ["zulip_gtk"]
typeCheckingMode = "basic"
reportMissingModuleSource = false

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E501", "F401", "W503"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
